# expo-push-notification-api-rust-on-lambda

./: .env.local  .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  setup_deploy_env.sh
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
src/: http_handler.rs
