[package]
name = "expo-push-notification-api-rust-on-lamda"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
expo_push_notification_client = { version = "1.0.8", default-features = false, features = ["rustls-tls"] }
http = "1.4.0"
lambda_http = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
supabase_rs = "0.4.16"

tokio = { version = "1", features = ["macros"] }
