[package]
name = "expo-push-notification-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.2"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
http = "1.4.0"

expo_push_notification_client = { version = "2.0.0", default-features = false, features = ["rustls-tls"] }
supabase_rs = "0.5.0"

aws-config = { version = "1.1.10", features = ["rustls"] }
aws-sdk-ssm = "1.20.0"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

thiserror = "2.0.17"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
